maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:50: error: Missing closing brace `}' assumed here
}
^